[package]
name = "exterminator_wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
rand = "0.8.5"
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_asset_loader = { version = "0.16.1", features = ["2d"] }
bevy-inspector-egui = "0.19.0"
bevy_ecs_tilemap = "0.11.0"
anyhow = "1.0.72"
# bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d", "parallel" ] }
# bevy-inspector-egui-rapier = { version = "0.9.0", features = [ "bevy_rapier2d" ] }
# bevy_ecs_ldtk = "0.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
