[package]
name = "exterminator_wizard"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_ecs_ldtk = "0.9"
bevy_rapier2d = { version = "0.22", features = [ "simd-stable", "parallel", "debug-render-2d" ] }
bevy-inspector-egui = "0.20"
bevy_hanabi = { version = "0.7", default-features = false, features = [ "2d" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
